--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run genkit:dev & next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "dev": "next dev --turbopack -p 9002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -64,7 +62,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/wav": "^1.0.4",
-    "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
